// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.31.0
// 	protoc        v4.24.4
// source: goServer.proto

syntax = "proto3";

package vehicleServer;
option go_package = ".;vehicleServer";

import "google/protobuf/timestamp.proto";

// Vehicle message definition
message Vehicle {
  int32 number = 1;                     // vehicle ID
  string direction = 2;                 // driving direction
  int32 address = 3;                    // node/vehicle address
  int32 send_votes = 4;                 // number of votes sent
  int32 receive_votes = 5;              // number of votes received
  repeated Vehicle covehicle = 6;       // vehicles in the same direction group
  int32 random_number = 7;              // random number for consensus simulation
  int32 license_plate = 8;              // license plate (optional field)
  google.protobuf.Timestamp election_time = 9;  // timestamp when elected as leader
  int32 election_vote = 10;             // votes received in leader election
  string election_status = 11;          // Candidate / Follower
}

// Request message definition
message Request {
  Vehicle vehicle = 1;          // vehicle information
  string Port = 2;              // port of the sender
  int32 total_vehicles = 3;     // total number of vehicles involved
  int32 RandomNumber = 4;       // random value for test simulation
}

// Response message definition
message Response {
  string message = 1;              // server message
  string status = 2;               // acknowledged / ignored
  string direction_status = 3;     // True if directions are compatible
  string response_direction = 4;   // direction of the responding vehicle
  Vehicle vehicle = 5;             // vehicle information in response
}

service VehicleService {
  rpc ReceiveRequest (Request) returns (Response);
  rpc RandomAgreement (Request) returns (Response);
  rpc LeaderElection (Request) returns (Response);
  rpc UpdateVoteCount (Request) returns (Response);
}

// ConcurrentVehicle message definition
message ConcurrentVehicle {
  Vehicle vehicle = 1;                // vehicle information
  ConcurrentVehicle next = 2;         // pointer to next vehicle in list
}

// VehicleRPC message definition
message VehicleRPC {
  int32 address = 1;                                // server address
  map<int32, Vehicle> vehicles = 2;                 // map of all active vehicles
  int32 total_vehicles = 3;                         // total number of vehicles
  int32 vote_count = 4;                             // total number of votes
  ConcurrentVehicle concurrent_vehicle_list = 5;    // linked list of vehicles
}